# NL-BDDL-PARSER

./: Makefile  README.md  annotator_gui_config.ini  main_config.ini  pyproject.toml
nl_bddl_parser/: __main__.py
nl_bddl_parser/annotations_gui/: gui.py  helper.py
